--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
             <label>Notizen</label>
             <textarea></textarea>
           </div>
-
-          <button class="delete">Block löschen</button>
+          <br />
+          <div>
+            <button class="delete">Block löschen</button>
+          </div>
         </div>
       </div>
     </div>
