Refactor training block structure in index.html

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
       <!-- Blocks -->
       <div id="blocks">
-        <!-- TEMPLATE BLOCK -->
         <div class="training-block template">
-          <!-- Left -->
           <div class="left">
             <img class="preview" alt="Vorschau" />
             <input type="file" accept="image/*" />
+            <div class="delete_button">
+              <button class="delete">Block löschen</button>
+            </div>
           </div>
 
-          <!-- Center -->
           <div class="center">
             <div class="field">
               <label>Übungsname:</label>
@@ -39,14 +39,9 @@
             </div>
           </div>
 
-          <!-- Right -->
           <div class="right">
-            <label>Notizen</label>
+            <label name="notizen">Notizen</label>
             <textarea></textarea>
-          </div>
-          <br />
-          <div>
-            <button class="delete">Block löschen</button>
           </div>
         </div>
       </div>
